@@ -24,12 +24,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                  <forkCount>3</forkCount>
-                  <reuseForks>true</reuseForks>
-                  <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                  </configuration>
+                <version>2.22.0</version>
             </plugin>
         </plugins>
     </reporting>
